fix: hide scroll visibility from response when opening schema

--- a/src/components/Schema/Schema.module.scss
+++ b/src/components/Schema/Schema.module.scss
@@ -9,6 +9,7 @@
   row-gap: 15px;
   transition: right .25s linear;
   width: 250px;
+  z-index: 11;
 
   &__active {
     right: 0;
